# cloophole

./: .gitignore  CLAUDE.md  README.md  claude-resume-product-plan.md  install.ps1  pyproject.toml  uninstall.ps1
.github/workflows/: release.yml
cloophole/: __init__.py  __main__.py  _build.py  app.py  claude_hook.py  config.py  daemon.py  fire.py  gui.py  inject.py  install_win.py  menu.py  paths.py  probe.py  reset_parser.py  runner.py  sessions.py  state.py  statusline.py  subproc.py  ui.py  winproc.py  wsl.py
docs/: BUGS.md  CONVENTIONS.md  DATA_MODEL.md  ONBOARDING.md  ROADMAP.md  STATUS.md
docs/decisions/: 0000-template.md  0001-windows-first-engine.md  0002-idle-poll.md  0003-desktop-tray-app.md  0005-standalone-exe-installer.md  0006-terminal-menu.md  0007-desktop-gui-window.md  0008-rate-limit-hook.md  0009-clean-uninstall.md  0010-session-tickboxes.md  0011-visible-resume.md  0012-inject-into-session.md  README.md
docs/progress/: 2026-06.md
packaging/: cloophole.spec  entry.py
tests/: test_hook.py  test_idle_poll.py  test_reset_parser.py  test_runner.py  test_state_machine.py  test_ui.py
