[project]
name = "cloophole"
version = "0.1.0"
description = "Auto-resume Claude Code work when your usage quota resets (Windows-first daemon)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []  # stdlib only

[project.scripts]
cloophole = "cloophole.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cloophole"]
